--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,7 +1,9 @@
 backend:
-  name: git-gateway  
+  name: github
+  repo: y-sashikata/test   
   branch: main
 
+local_backend: true
 media_folder: "public/uploads"
 public_folder: "/uploads"
 
@@ -14,6 +16,7 @@ collections:
     fields:
       - { label: "タイトル", name: "title", widget: "string" }
       - { label: "公開日", name: "date", widget: "datetime" }
+      - { label: "説明", name: "description", widget: "string" }
       - { label: "本文", name: "body", widget: "markdown" }
 
   - name: "pages"
