decap git管理に変更

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,9 +3,10 @@ backend:
   repo: y-sashikata/test   
   branch: main
 
-local_backend: true
+# local_backend: true
 media_folder: "public/uploads"
 public_folder: "/uploads"
+publish_mode: editorial_workflow
 
 collections:
   - name: "nav"
